销售 分享排行榜

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">CarEasySell</string>
     <string name="vehicleheat_item_car_state">上架%1$s次 | 分享%2$s次 | 浏览%3$s次</string>
+    <string name="market_share_rank">分享%1$s次 | 浏览%2$s次</string>
 </resources>
