--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CarEasySell</string>
+    <string name="app_name">车易售</string>
     <string name="vehicleheat_item_car_state">上架%1$s次 | 分享%2$s次 | 浏览%3$s次</string>
     <string name="market_share_rank">分享%1$s次 | 浏览%2$s次</string>
     <string name="cancle">取消</string>
